2.Kubernetes容器编排/config/daemonset/jaeger/jaeger-example-hotrod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jaeger-test
spec:
  selector:
    matchLabels:
      app: jaeger-test
  template:
    metadata:
      labels:
        app: jaeger-test
    spec:
      containers:
      - name: hotrod
        image: jaegertracing/example-hotrod:latest
